edit package json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/moinkhan017/WEATHER-BY-CITY.git/",
   "name": "weather-by-city",
   "private": true,
   "version": "0.0.0",
